# MinecraftServerC

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  chat.c  chat.h  cmake_install.cmake  extract_uuid.c  extract_uuid.h  handshake.c  handshake.h  login.c  login.h  main.c  movement.c  movement.h  nbt_impl.c  packet_ids.h  packet_utils.c  packet_utils.h  play.c  play.h  play_helpers.c  play_helpers.h  server  server.c  server.h  socket_utils.c  socket_utils.h
